add some method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ logging.level.root=warn
 spring.datasource.url=jdbc:mysql://localhost:3306/rosebud
 spring.datasource.username=root
 spring.datasource.password=123
+
+mybatis.config-location=classpath:mybatis/config.xml
+mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+mybatis.type-aliases-package=leo123.party.rosebud_api.model
